--- a/README
+++ b/README
@@ -1,13 +1,14 @@
+# Code4Reference
 This repo has miscellaneous reference cods. The code is from various tutorial and post at www.code4reference.com. 
 The latest code is maintained here. Any one can use the example source code.If you want to contribute to this 
 git repo you are most welcome. Even you can write article blog and share with www.code4reference.com
 
-Repo details
+# Repo details
 -------------------------------------------------------------------
-This project contains 4 Folders
-1. Algorithm : contains algorithm related solution.
-2. AndroidProjects : contains Android projects
-3. JavaPrograms : Contains java programs, some mini projects, and javadesign related project.
-4. PythonPrograsm : Contains Python script. I write these script when I fiddle with python modules/packages.  
-5. GradleExample : Contains the gradle script.
-6. CaliperProjects: Contains the microbenchmarking project using google caliper.
+## This project contains 4 Folders
+* Algorithm       : contains algorithm related solution.
+* AndroidProjects : contains Android projects
+* JavaPrograms    : Contains java programs, some mini projects, and javadesign related project.
+* PythonPrograsm  : Contains Python script. I write these script when I fiddle with python modules/packages.  
+* GradleExample   : Contains the gradle script.
+* CaliperProjects : Contains the microbenchmarking project using google caliper.
